<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/headerView_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ic_stethoscope"
            android:layout_marginTop="70dp"
            app:civ_border_color="@color/colorDarkGrey"
            app:civ_border_width="2dp"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/headerView_tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/headerView_tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
    </LinearLayout>
</layout>