<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileActivity"
    >
  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_user_profile_activity"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:background="@color/transparent"
      >
    <TextView
        android:id="@+id/tv_title_user_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:textSize="@dimen/toolbar_title_text_size"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user_profile_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
  </androidx.appcompat.widget.Toolbar>
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:fillViewport="true"
      android:scrollbars="none"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_user_profile_activity"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
      <FrameLayout
          android:id="@+id/fl_user_image"
          android:layout_width="@dimen/profile_user_image_size"
          android:layout_height="@dimen/profile_user_image_size"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/profile_user_photo_margin"
            android:foreground="?attr/selectableItemBackground"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_placeholder"
            app:civ_border_color="@color/colorDarkGrey"
            app:civ_border_width="3dp"
            />
      </FrameLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_full_name"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/hint_full_name"
          android:textColorHint="@color/colorSecondaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/fl_user_image">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />
      </com.google.android.material.textfield.TextInputLayout>



      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_email"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/et_hint_email_id"
          android:textColorHint="@color/colorSecondaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/til_full_name">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints="" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/til_mobile_number"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/et_hint_mobile_number"
          android:textColorHint="@color/colorSecondaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/til_email"
          >

        <EditText
            android:id="@+id/et_mobile_number_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:ignore="SpeakableTextPresentCheck"
            />
      </com.google.android.material.textfield.TextInputLayout>
      <com.balysv.materialripple.MaterialRippleLayout
          android:id="@+id/ripple"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="30dp"
          android:layout_marginTop="30dp"
          android:layout_marginBottom="20dp"
          >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_user_profile_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/btn_lbl_save"
            android:textSize="@dimen/btn_textSize"

            />
      </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>