<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackGroundColor"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="4dp"
            android:src="@drawable/medical_machine_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:id="@+id/img_medics"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_activity_login"
            android:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/light_blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:shadowColor="@color/colorDarkGrey"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_medics"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="abc@gmail.com"
                android:hint="Email"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:text="123456"
                android:hint="Password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="Login"
                android:background="@drawable/btn_rounded"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:textSize="@dimen/btn_textSize"
               />
        </com.balysv.materialripple.MaterialRippleLayout>


        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/register"
            android:layout_marginTop="16dp"
            android:fontFamily="serif"
            android:textColor="@color/light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ripple"
            />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/forgot_password"
            android:textColor="@color/light_blue"
            android:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            tools:ignore="UnusedAttribute"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:id="@+id/iv_register_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/signin_button_background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:src="@drawable/google_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Sign in with Google"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/light_blue"
                android:paddingHorizontal="10dp"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>



